--- a/tony-poem/.env
+++ b/tony-poem/.env
@@ -1,4 +1,4 @@
-VITE_FIREBASE_API_KEY=AIzaSyC6OOLAZ...
+VITE_FIREBASE_API_KEY=AIzaSyC6OOLAZhjbnhrsJt-UVhoWw67RZ07fQHU
 VITE_FIREBASE_AUTH_DOMAIN=lubby-59574.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=lubby-59574
 VITE_FIREBASE_STORAGE_BUCKET=lubby-59574.appspot.com
