--- a/tony-poem/package.json
+++ b/tony-poem/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.15",
     "@tanstack/react-query": "^5.69.0",
+    "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "firebase": "^11.5.0",
     "framer-motion": "^12.5.0",
     "postcss": "^8.5.3",
