--- a/tony-poem/package.json
+++ b/tony-poem/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.15",
     "@tanstack/react-query": "^5.69.0",
