--- a/tony-poem/package.json
+++ b/tony-poem/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "vercel-build": "npm install vite && vite build",
     "preview": "vite preview"
   },
   "engines": {
